@@ -99,21 +99,14 @@ public abstract class AbstractMergeTestBase extends HBaseClusterTestCase {
     
     // Now create the root and meta regions and insert the data regions
     // created above into the meta
-    
-    HRegion root = HRegion.createHRegion(HRegionInfo.ROOT_REGIONINFO,
-      testDir, this.conf);
-    HRegion meta = HRegion.createHRegion(HRegionInfo.FIRST_META_REGIONINFO,
-      testDir, this.conf);
-    HRegion.addRegionToMETA(root, meta);
+
+    createRootAndMetaRegions();
     
     for(int i = 0; i < regions.length; i++) {
       HRegion.addRegionToMETA(meta, regions[i]);
     }
-    
-    root.close();
-    root.getLog().closeAndDelete();
-    meta.close();
-    meta.getLog().closeAndDelete();
+
+    closeRootAndMeta();
   }
 
   private HRegion createAregion(byte [] startKey, byte [] endKey, int firstRow,
